<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="table_record">Table Record</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="tables_of">Tables of</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="pre_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    
    <!-- 20150628 -->
    <string name="not_editable_tip">Sorry, value is not editable any more!</string>
</resources>