<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/round_arrow_left_24"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:text="@string/table_record"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorGray" />

        <ImageView
            android:id="@+id/image_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/round_arrow_right_24"
            android:visibility="gone" />

    </LinearLayout>

    <ListView
        android:id="@+id/tableRowList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>