<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dip"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <requestFocus />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image_prev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/round_arrow_left_24" />

        <ImageView
            android:id="@+id/image_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/round_arrow_right_24" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_pkflag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginTop="8dip"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pkflag"
            android:layout_marginTop="8dip"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dip"
                android:text="@string/name"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/value_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_layout"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dip"
                android:text="@string/value"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/et_valuey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="3" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_noteditable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/value_layout"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:textColor="@color/colorAccent"
            android:text="@string/not_editable_tip"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />

    </LinearLayout>

</LinearLayout>