<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="4dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <requestFocus />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/image_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_type"
            android:layout_alignBottom="@+id/value_layout"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_arrow_left_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_type"
            android:layout_alignBottom="@+id/value_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@drawable/round_arrow_right_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_type"
            android:layout_marginTop="4dip"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/appdm_key"
                android:textColor="@color/colorGray" />

            <EditText
                android:id="@+id/et_key"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:inputType="text"
                android:minWidth="100dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/value_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_layout"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/value"
                android:textColor="@color/colorGray" />

            <EditText
                android:id="@+id/et_valuey"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="3" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_noteditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/value_layout"
            android:layout_toLeftOf="@id/image_next"
            android:layout_toRightOf="@id/image_prev"
            android:text="@string/not_editable_tip" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>